<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background" >

    <TextView
        android:id="@+id/flags_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flag_text"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_guessthecountry"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:background="#000080"
        android:text="@string/guessthecountry_button"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flags_textview" />

    <Button
        android:id="@+id/btn_guesshints"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="#000080"
        android:text="@string/guesshints_button"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flags_textview" />

    <Button
        android:id="@+id/btn_guesstheflag"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:background="#000080"
        android:text="@string/guesstheflag_button"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_guessthecountry" />

    <Button
        android:id="@+id/btn_advancedlevel"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="#000080"
        android:text="@string/advancedlevel_button"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_guesshints" />

    <Switch
        android:id="@+id/timer_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:checked="false"
        android:switchPadding="5dp"
        android:text="@string/timer_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_advancedlevel"
        tools:checked="false" />


</android.support.constraint.ConstraintLayout>